<!DOCTYPE resources [<!ENTITY appname "Destination Completed!"><!ENTITY author "Wígny Almeida">]>

<resources>
    <string name="app_name">&appname;</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <string name="menu_point">Map</string>
    <string name="menu_main">Main</string>
    <string name="menu_about">About</string>
    <string name="menu_settings">Settings</string>

    <string name="main_clock">Operation</string>
    <string name="main_choice_time">Choose an hour</string>
    <string name="main_distance">Minimum distance:</string>
    <string name="main_time_set">Set</string>
    <string name="main_clock_schedule">Schedule:</string>
    <string name="main_clock_repeat">Repeat daily:</string>
    <string name="main_info">For the app to work, make sure that your smartphone\'s Location is enabled when it\'s running.</string>
    <string name="main_open_map">Set destination:</string>

    <string name="notification_title">Running…</string>
    <string name="notification_title_failure">Execution error</string>
    <string name="notification_text">The app is calculating your route…</string>
    <string name="notification_text_failure_location">Failed to get location.</string>
    <string name="notification_text_failure_permission">Lost location permission.</string>
    <string name="notification_text_default">Looking for current location.</string>
    <string name="notification_launch">Open App</string>
    <string name="notification_stop">Stop</string>
    <string name="notification_wakeup_title">I arrived!</string>
    <string name="notification_wakeup_content">You just arrived at your destination!</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_repeat_days_title">Choose the days of the week…</string>
    <string name="dialog_reset">Reset</string>
    <string name="dialog_map_title">Destination not found!</string>
    <string name="dialog_map_content">Enter your destination by adding a marker on the map…</string>
    <string name="dialog_map_ok">Add a destination</string>
    <string name="dialog_time_title">Undefined operating hours!</string>
    <string name="dialog_time_content">Set an app working time…</string>
    <string name="dialog_time_ok">Set a Time</string>
    <string name="dialog_location_disabled_title">Location off</string>
    <string name="dialog_location_disabled_content">The location of your smartphone is disabled, preventing the app from working. Do you want to enable location?</string>
    <string name="dialog_choice_ringtone">Select a ringtone as notification:</string>

    <string-array name="minimumDistance" translatable="false">
        <item>300 m</item>
        <item>500 m</item>
        <item>700 m</item>
        <item>900 m</item>
        <item>1 Km</item>
        <item>1,5 Km</item>
    </string-array>

    <string-array name="daysOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string-array name="themeChoice">
        <item>Light</item>
        <item>Dark</item>
    </string-array>

    <string-array name="mapType">
        <item>None</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>

    <string name="info_title">Created by &author;</string>

    <string name="toast_on">The app will automatically start at the specified time</string>
    <string name="toast_theme_reboot">The theme will be applied at the next reboot</string>

    <string name="location_permission_request_content">The app needs access to the location of the device to work!</string>
    <string name="location_permission_request_title">Required location access</string>

    <string name="about_description">\'&appname;\' was done with affection in Rondônia, Brazil.</string>
    <string name="about_copyright" translatable="false">\u00a9 2018-%1$d wigny.github.io</string>

    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_manual">Manual selection</string>
    <string name="settings_theme_manual_description">Choose theme manually</string>
    <string name="settings_theme_automatic">Automatic selection</string>
    <string name="settings_theme_automatic_description">Choose theme automatically according to the time of day</string>

    <string name="settings_map_traffic_description">Show traffic density on the map</string>
    <string name="settings_map_traffic">Show traffic</string>
    <string name="settings_map_controls">Show controls</string>
    <string name="settings_map_controls_description">Show interaction controls on the map</string>
    <string name="settings_map_type_description">Select a map type</string>
    <string name="settings_map_type">Map Type</string>
    <string name="settings_map_title">Map</string>

    <string name="settings_notification_vibration">Vibrate</string>
    <string name="settings_notification_vibration_description">Vibrate on arrival</string>
    <string name="settings_notification_choice_sound">Choose sound</string>
    <string name="settings_notification_sound">Play sound</string>
    <string name="settings_notification_sound_description">Play sound on arrival</string>
    <string name="settings_notification_title">Notification</string>
    <string name="settings_reset_title">Reset</string>
    <string name="settings_reset_reset_description">Delete all saved preferences</string>
    <string name="settings_reset_reset">Reset data</string>
    <string name="main_destination">Destination</string>

    <string name="tutorial_hello">Hello</string>
    <string name="tutorial_hello_description">You will see below a short tutorial on how the app works.</string>
    <string name="tutorial_schedule">Set an opening time</string>
    <string name="tutorial_schedule_description">Click the button to choose the desired time for automatic launch of the app.</string>
    <string name="info_unavailable">Unavailable</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>

</resources>
